added services to user

--- a/Frontend/src/app/components/admin-dashboard/admin-dashboard.html
+++ b/Frontend/src/app/components/admin-dashboard/admin-dashboard.html
@@ -556,7 +556,10 @@
 
 
 <div>
-  <h2>Waiting for Approval</h2>
+  <h2 style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; text-align: center; color: #4A90E2; font-weight: 600; font-size: 28px; text-shadow: 1px 1px 2px #ccc;">
+  Waiting for Approval
+</h2>
+
    <div class="admin-events-grid">
     <div *ngFor="let event of filteredEventsone" class="admin-event-card">
       <div class="event-header">
