--- a/Frontend/src/app/components/organizer-dashboard/organizer-dashboard.html
+++ b/Frontend/src/app/components/organizer-dashboard/organizer-dashboard.html
@@ -7,7 +7,6 @@
         <p class="dashboard-subtitle">Manage your events with ease</p>
       </div>
       <button class="logout-btn" (click)="logout()">
-        <span class="btn-icon">🚪</span>
         Logout
       </button>
     </div>
@@ -305,6 +304,6 @@
   <!-- Footer -->
   <footer class="dashboard-footer">
     <h2 class="footer-title"><span class="brand-highlight">Happenin'</span></h2>
-    <p class="footer-text">For any queries please reach out to us at <span class="gmailid">happenin&#64;gmail.com</span>
+    <p class="footer-text">For any queries please reach out to us at <span class="gmailid">happenin.events.app&#64;gmail.com</span>
     </p>
   </footer>
